--- a/index.html
+++ b/index.html
@@ -1,128 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>АвтоДіагноз – OBD2 Розшифровка</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f7fa;
-      color: #333;
-    }
-
-    header {
-      background-color: #0057b8;
-      color: white;
-      padding: 1.5rem;
-      text-align: center;
-    }
-
-    header img {
-      height: 60px;
-      margin-bottom: 0.5rem;
-    }
-
-    main {
-      padding: 1rem 2rem;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    h1, h2 {
-      color: #0057b8;
-    }
-
-    p {
-      line-height: 1.6;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    input, textarea {
-      padding: 0.8rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-
-    button {
-      padding: 0.8rem;
-      background-color: #0057b8;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #004099;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 14px;
-      color: #777;
-      background-color: #eee;
-      margin-top: 2rem;
-    }
-
-    @media (max-width: 600px) {
-      main {
-        padding: 1rem;
-      }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UpCheck — Збільшення продажів у фаст-фуді</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Car-icon-blue.svg/120px-Car-icon-blue.svg.png" alt="Логотип АвтоДіагноз" />
-    <h1>АвтоДіагноз</h1>
-    <p>Розшифровка OBD2 кодів помилок</p>
+    <img src="logo.png" alt="UpCheck Logo">
+    <h1>UpCheck</h1>
+    <p>Збільшення продажів у фаст-фуді: навчання, аудит, меню</p>
   </header>
-
   <main>
-    <section>
-      <h2>Як це працює?</h2>
-      <p>Надішліть нам код помилки (наприклад, P0171), і ми надамо повну розшифровку, можливі причини та поради щодо ремонту.</p>
-      <p><strong>Консультація</strong> від 100 грн. Перший запит — <strong>безкоштовно!</strong></p>
-    </section>
-
-    <section>
-      <h2>Про нас</h2>
-      <p>Ми — команда автоентузіастів з багаторічним досвідом у сфері діагностики автомобілів.  
-      Наша мета — зробити розшифровку кодів помилок доступною кожному водію.  
-      Ми пояснюємо простою мовою складні технічні терміни та допомагаємо з перших хвилин.</p>
-    </section>
-
-    <section>
-      <h2>Залишити запит</h2>
-      <form action="https://t.me/Shkabko_bot" target="_blank">
-        <input type="text" name="name" placeholder="Ваше імʼя" required />
-        <input type="text" name="code" placeholder="Код помилки (наприклад, P0300)" required />
-        <textarea name="comment" rows="4" placeholder="Коментар або опис ситуації"></textarea>
-        <button type="submit">Надіслати в Telegram</button>
-      </form>
-    </section>
-
-    <section>
-      <h2>Контакти</h2>
-      <p>Telegram бот: <a href="https://t.me/Shkabko_bot" target="_blank">@Shkabko_bot</a></p>
-    </section>
+    <!-- Основний вміст тут (скорочено для зразка) -->
+    <h2>🚀 Як це працює?</h2>
+    <p>Етапи, формат співпраці, ціни, контакти тощо...</p>
   </main>
-
   <footer>
-    © 2025 АвтоДіагноз. Всі права захищено.
+    <p><strong>Контакти:</strong><br>
+      ✉️ Alelseyshk@icloud.com<br>
+      💬 Telegram: <a href="https://t.me/Shkabko">@Shkabko</a><br>
+      📱 Телефон: +380501070219
+    </p>
   </footer>
 </body>
 </html>
