--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function sendTelegram() {
     fetch(url).then(response => {
         document.getElementById("status").innerText = "✅ Заявку надіслано!";
     }).catch(error => {
-        document.getElementById("status").innerText = "❌ Помилка надсилання.";
+        document.getElementById("status").innerText = "❌nnnn Помилка надсилання.";
     });
 }
 </script>
