--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>UpCheck — Збільшення продажів у фаст-фуді</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -13,117 +13,60 @@
     <p>Збільшення продажів у фаст-фуді: навчання, аудит, меню</p>
   </header>
 
-  <section class="slider">
+  <section class="carousel">
     <div class="slides">
-      <img src="slide1.jpg" alt="Обслуговування клієнтів">
-      <img src="slide2.jpg" alt="Тренування касирів">
-      <img src="slide3.jpg" alt="Зростання продажів">
+      <img src="slide1.jpg" alt="Slide 1">
+      <img src="slide2.jpg" alt="Slide 2">
+      <img src="slide3.jpg" alt="Slide 3">
     </div>
   </section>
 
   <section>
-    <h2>📈 Порівняння результатів</h2>
-    <table class="comparison-table">
-      <tr>
-        <th></th>
-        <th>До UpCheck</th>
-        <th>Після UpCheck</th>
-      </tr>
-      <tr>
-        <td>Середній чек</td>
-        <td>110 ₴</td>
-        <td><strong>145 ₴</strong></td>
-      </tr>
-      <tr>
-        <td>Апсел/допи</td>
-        <td>1 з 5 клієнтів</td>
-        <td><strong>4 з 5 клієнтів</strong></td>
-      </tr>
-      <tr>
-        <td>Мотивація персоналу</td>
-        <td>Низька</td>
-        <td><strong>Висока</strong></td>
-      </tr>
-    </table>
-  </section>
-
-  <section>
     <h2>🚀 Як це працює?</h2>
-    <h3>🔍 Етап 1: Аудит торгової точки (ТТ)</h3>
+    <p>Опис основних етапів співпраці, які допоможуть вашому бізнесу зростати:</p>
+    <h3>🔍 Етап 1: Аудит торгової точки</h3>
     <ul>
       <li>Спостереження за роботою касирів</li>
       <li>Аналіз середнього чеку та кількості позицій</li>
       <li>Перевірка ефективності продажів «допів», комбо</li>
       <li>Аналіз меню на зручність, логіку, прибутковість</li>
     </ul>
-    <p><strong>✅ Результат:</strong> чіткий звіт із зонами росту та рекомендаціями</p>
-
     <h3>🧠 Етап 2: Оптимізація меню</h3>
     <ul>
       <li>Перерозподіл товарів за прибутковістю</li>
       <li>Пропозиції щодо ребрендингу меню</li>
       <li>Візуалізація акцентів для касира та клієнта</li>
     </ul>
-    <p><strong>✅ Результат:</strong> меню, що продає саме себе</p>
-
     <h3>🗣️ Етап 3: Скрипти продажів</h3>
     <ul>
       <li>Готові фрази для касирів: апсел, комбо, заміна</li>
       <li>Робота з відмовами: "просто каву", "нічого більше"</li>
-      <li>Поводження в черзі, при напливі, реакція на ситуації</li>
     </ul>
-    <p><strong>✅ Результат:</strong> касири впевнені, швидкі, ефективні</p>
-
     <h3>🎓 Етап 4: Тренінг касирів</h3>
     <ul>
       <li>1–2 год онлайн або офлайн</li>
-      <li>Рольові ситуації, реакції, робота зі швидкістю</li>
       <li>Інтерактив, живі приклади, гумор</li>
     </ul>
-    <p><strong>✅ Результат:</strong> касири мотивовані, готові працювати по-новому</p>
-
     <h3>🔄 Етап 5: Підтримка після навчання</h3>
     <ul>
       <li>Телеграм-група для менеджерів і касирів</li>
-      <li>Щомісячний аналіз результатів</li>
-      <li>Регулярні поради, фідбеки, оновлення скриптів</li>
+      <li>Аналіз результатів, фідбеки</li>
     </ul>
-    <p><strong>✅ Результат:</strong> зростання середнього чеку, постійна мотивація</p>
   </section>
 
   <section>
-    <h2>💼 Формат співпраці</h2>
-    <p>Одноразовий аудит + навчання або повний пакет <strong>"Все включено"</strong> на 1–3 місяці</p>
-  </section>
-
-  <section>
-    <h2>💰 Орієнтовна вартість</h2>
-    <table class="pricing-table">
-      <tr><th>Послуга</th><th>Вартість</th></tr>
-      <tr><td>Аудит ТТ</td><td>від 100$</td></tr>
-      <tr><td>Скрипти + оптимізація меню</td><td>від 150$</td></tr>
-      <tr><td>Тренінг касирів</td><td>від 200$</td></tr>
-      <tr><td>Підтримка 1 місяць</td><td>від 100$</td></tr>
-      <tr><td><strong>⭐ Пакет "Все включено"</strong></td><td><strong>від 500$</strong></td></tr>
-    </table>
-  </section>
-
-  <section>
-    <h2>✅ Чому саме UpCheck?</h2>
+    <h2>💰 Орієнтовна вартість:</h2>
     <ul>
-      <li>Більше 10 років досвіду у сфері фаст-фуду</li>
-      <li>Прості рішення, що працюють вже з першого тижня</li>
-      <li>Постійна підтримка та рішення "під ключ"</li>
+      <li>Аудит ТТ — від 100$</li>
+      <li>Скрипти + оптимізація меню — від 150$</li>
+      <li>Тренінг касирів — від 200$</li>
+      <li>Підтримка 1 місяць — від 100$</li>
+      <li><strong>⭐ Пакет "Все включено" — від 500$</strong></li>
     </ul>
-    <a href="https://t.me/Shkabko" class="cta-button" target="_blank">Зв'язатись у Telegram</a>
   </section>
 
   <footer>
-    <p><strong>Контакти:</strong><br>
-      ✉️ Alelseyshk@icloud.com<br>
-      💬 Telegram: <a href="https://t.me/Shkabko" target="_blank">@Shkabko</a><br>
-      📱 Телефон: +380501070219
-    </p>
+    <p><strong>Контакти:</strong> Alelseyshk@icloud.com | Telegram: @Shkabko | Телефон: +380501070219</p>
     <p>🎯 UpCheck — підсилимо ваш фаст-фуд системним зростанням!</p>
   </footer>
 </body>
