--- a/index.html
+++ b/index.html
@@ -1,73 +1,75 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UpCheck — Збільшення продажів у фаст-фуді</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UpCheck — Фастфуд Консалтинг</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="upcheck-logo.png" alt="UpCheck Logo">
-    <h1>UpCheck</h1>
-    <p>Збільшення продажів у фаст-фуді: навчання, аудит, меню</p>
-  </header>
+    <header>
+        <h1>UpCheck — зростання прибутку фастфуду до +35%</h1>
+        <p>Аудит • Меню • Скрипти • Тренінг • Підтримка</p>
+        <p class="contacts">📧 AlekseyShk@icloud.com | 💬 Telegram: @Shkabko | 📞 +380501070219</p>
+    </header>
 
-  <section class="carousel">
-    <div class="slides">
-      <img src="slide1.jpg" alt="Slide 1">
-      <img src="slide2.jpg" alt="Slide 2">
-      <img src="slide3.jpg" alt="Slide 3">
-    </div>
-  </section>
+    <main>
+        <section>
+            <h2>Що заважає вашим продажам</h2>
+            <ul>
+                <li>Меню без акцентів</li>
+                <li>Візуальний шум на касі</li>
+                <li>Скрипти «для галочки»</li>
+                <li>Меню створюють кухарі, а не маркетологи</li>
+                <li>Касир не мотивований</li>
+                <li>Власник не бачить воронку продажів</li>
+            </ul>
+        </section>
 
-  <section>
-    <h2>🚀 Як це працює?</h2>
-    <p>Опис основних етапів співпраці, які допоможуть вашому бізнесу зростати:</p>
-    <h3>🔍 Етап 1: Аудит торгової точки</h3>
-    <ul>
-      <li>Спостереження за роботою касирів</li>
-      <li>Аналіз середнього чеку та кількості позицій</li>
-      <li>Перевірка ефективності продажів «допів», комбо</li>
-      <li>Аналіз меню на зручність, логіку, прибутковість</li>
-    </ul>
-    <h3>🧠 Етап 2: Оптимізація меню</h3>
-    <ul>
-      <li>Перерозподіл товарів за прибутковістю</li>
-      <li>Пропозиції щодо ребрендингу меню</li>
-      <li>Візуалізація акцентів для касира та клієнта</li>
-    </ul>
-    <h3>🗣️ Етап 3: Скрипти продажів</h3>
-    <ul>
-      <li>Готові фрази для касирів: апсел, комбо, заміна</li>
-      <li>Робота з відмовами: "просто каву", "нічого більше"</li>
-    </ul>
-    <h3>🎓 Етап 4: Тренінг касирів</h3>
-    <ul>
-      <li>1–2 год онлайн або офлайн</li>
-      <li>Інтерактив, живі приклади, гумор</li>
-    </ul>
-    <h3>🔄 Етап 5: Підтримка після навчання</h3>
-    <ul>
-      <li>Телеграм-група для менеджерів і касирів</li>
-      <li>Аналіз результатів, фідбеки</li>
-    </ul>
-  </section>
+        <section>
+            <h2>Меню до / після UpCheck</h2>
+            <p><strong>До:</strong> 60+ позицій, відсутність логіки, важко продавати</p>
+            <p><strong>Після:</strong> 28 фокусних позицій, акценти, +18–25% до чеку</p>
+        </section>
 
-  <section>
-    <h2>💰 Орієнтовна вартість:</h2>
-    <ul>
-      <li>Аудит ТТ — від 100$</li>
-      <li>Скрипти + оптимізація меню — від 150$</li>
-      <li>Тренінг касирів — від 200$</li>
-      <li>Підтримка 1 місяць — від 100$</li>
-      <li><strong>⭐ Пакет "Все включено" — від 500$</strong></li>
-    </ul>
-  </section>
+        <section>
+            <h2>Гарантія результату</h2>
+            <ul>
+                <li>Зміни вже на 5-й день</li>
+                <li>+20% до +35% прибутку</li>
+                <li>Повернення оплати, якщо без результату</li>
+                <li>Telegram-підтримка щодня</li>
+            </ul>
+        </section>
 
-  <footer>
-    <p><strong>Контакти:</strong> Alelseyshk@icloud.com | Telegram: @Shkabko | Телефон: +380501070219</p>
-    <p>🎯 UpCheck — підсилимо ваш фаст-фуд системним зростанням!</p>
-  </footer>
+        <section>
+            <h2>Кейс: PizzaMax</h2>
+            <blockquote>
+                “Після 1 тренінгу касири почали пропонувати комбо самі. За 2 тижні середній чек зріс з 118₴ до 161₴.”<br>
+                — Олена, співвласниця PizzaMax
+            </blockquote>
+        </section>
+
+        <section>
+            <h2>Що ви отримаєте вже на 5-й день</h2>
+            <ul>
+                <li>Меню, яке продає</li>
+                <li>Касир, який рекомендує</li>
+                <li>Менеджер, який бачить цифри</li>
+                <li>Telegram-група підтримки</li>
+                <li>Система, яка працює без тебе</li>
+            </ul>
+        </section>
+
+        <section class="cta">
+            <h2>Запишіться на безкоштовну консультацію</h2>
+            <p>UpCheck — працюємо на результат!</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 UpCheck</p>
+    </footer>
 </body>
 </html>
